horus_cpp_macros/tests/fail/on_function.rs
use horus_cpp_macros::horus_api;

#[horus_api]
pub fn standalone() {
    println!("hello");
}

fn main() {}
