horus_cpp_macros/tests/fail/on_function.stderr
error: #[horus_api] can only be applied to `struct` definitions or `impl` blocks.
       Help: move this attribute to the struct or impl you want to expose to C++.
       Example:
         #[horus_api]
         pub struct MyType { ... }
       or:
         #[horus_api]
         impl MyType { ... }
 --> tests/fail/on_function.rs:3:1
  |
3 | #[horus_api]
  | ^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `horus_api` (in Nightly builds, run with -Z macro-backtrace for more info)
